--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,3 @@
 REACT_APP_GOOGLE_MAPS_API_KEY=
 REACT_APP_OPEN_WEATHER_API_KEY=
-REACT_APP_OPEN_WEATHER_URL=
+REACT_APP_OPEN_WEATHER_URL=http://api.openweathermap.org/data/2.5/forecast?
